[package]
name = "core_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# L2 Bloom Filter Layer
bloomfilter = "1.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }

# Base62 ID Generation
rand = "0.8"
