[package]
name = "core_engine"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# L2 Bloom Filter Layer
bloomfilter = "1.0"
parking_lot = "0.12"

# Base62 ID Generation
rand = "0.8"

# L4 PostgreSQL Persistence
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"] }
dotenvy = "0.15"
